--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 dependencies {
     implementation project(":image_loader:api")
-    implementation project(":image_loader:impl")
+    implementation project(':image_loader:picasso-impl')
     implementation(libs.picasso.picasso)
 
     implementation 'androidx.core:core-ktx:1.5.0'
