--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,10 @@ plugins {
 dependencies {
     implementation project(":image_loader:api")
     implementation project(':image_loader:picasso-impl')
+    implementation project(':image_loader:glide-impl')
+    implementation project(':image_loader:coil-impl')
     implementation(libs.picasso.picasso)
+    implementation(libs.glide.glide)
 
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
