--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -171,6 +171,11 @@ ext.libs = [
                 picasso   : 'com.squareup.picasso:picasso:2.6.0-SNAPSHOT'
         ],
 
+        glide                  : [
+                glide: 'com.github.bumptech.glide:glide:4.12.0',
+                compiler   : 'com.github.bumptech.glide:compiler:4.12.0'
+        ],
+
         apollo                   : [
                 runtime: 'com.apollographql.apollo:apollo-runtime:2.5.2',
                 plugin : 'com.apollographql.apollo:apollo-gradle-plugin:2.5.2',
