--- a/image_loader/glide-impl/build.gradle
+++ b/image_loader/glide-impl/build.gradle
@@ -6,8 +6,8 @@ dependencies {
     implementation(libs.androidx.annotation)
     implementation(libs.androidx.core_ktx)
     implementation(libs.javax.inject)
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation(libs.glide.glide)
+    annotationProcessor(libs.glide.compiler)
 
     implementation project(":image_loader:api")
 }
