--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -176,6 +176,10 @@ ext.libs = [
                 compiler   : 'com.github.bumptech.glide:compiler:4.12.0'
         ],
 
+        coil: [
+                coil: 'io.coil-kt:coil:1.2.1'
+        ],
+
         apollo                   : [
                 runtime: 'com.apollographql.apollo:apollo-runtime:2.5.2',
                 plugin : 'com.apollographql.apollo:apollo-gradle-plugin:2.5.2',
